# Tesla_station_keeping

./: .gitignore  README.md  pyproject.toml  requirements-rl.txt
configs/: rl_stage1_hold.json  rl_stage2_recover.json  rl_stage3_full.json
reports/: report.md
results/: mild_run.csv  reversing_run.csv  rl_curr_eval.csv  rl_policy_path.csv  rl_policy_path_stage1.csv  rl_policy_path_stage2.csv  strong_run.csv
runs/rl_curr_stage1_hold/: vecNormalize.pkl
runs/rl_curr_stage1_hold/checkpoints/: sac_box_station_vecnormalize_100000_steps.pkl  sac_box_station_vecnormalize_50000_steps.pkl
runs/rl_curr_stage1_hold/eval/: evaluations.npz
runs/rl_curr_stage2_recover/checkpoints/: sac_box_station_vecnormalize_100000_steps.pkl  sac_box_station_vecnormalize_150000_steps.pkl  sac_box_station_vecnormalize_200000_steps.pkl  sac_box_station_vecnormalize_50000_steps.pkl
runs/rl_curr_stage2_recover/eval/: evaluations.npz
runs/rl_curr_stage3_full/checkpoints/: sac_box_station_vecnormalize_100000_steps.pkl  sac_box_station_vecnormalize_150000_steps.pkl  sac_box_station_vecnormalize_200000_steps.pkl  sac_box_station_vecnormalize_250000_steps.pkl  sac_box_station_vecnormalize_300000_steps.pkl  sac_box_station_vecnormalize_50000_steps.pkl
runs/rl_curr_stage3_full/eval/: evaluations.npz
scripts/: run_all.ps1  train_rl.ps1  train_rl_curriculum.ps1
src/underwaterStationKeeping/: __init__.py  controller.py  currentModels.py  evalRl.py  mathUtils.py  plotResults.py  rlBoxEnv.py  runScenario.py  simulation.py  trainRl.py  vehicleModel.py  visualizeRl.py
(+3 files in other folders)
